# soar_custom_integrations

test_integration/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
test_integration/actions/: async_action_example.py  async_action_example.yaml  enrich_entity_action_example.py  enrich_entity_action_example.yaml  ping.py  ping.yaml  simple_action_example.py  simple_action_example.yaml
test_integration/connectors/: simple_connector_example.py  simple_connector_example.yaml
test_integration/core/: auth.py  base_action.py  constants.py  data_models.py  utils.py
test_integration/core/api/: api_client.py  api_utils.py
test_integration/jobs/: simple_job_example.py  simple_job_example.yaml
test_integration/resources/: async_action_example_JsonResult_example.json  enrich_entity_action_example_JsonResult_example.json  simple_action_example_JsonResult_example.json
test_integration/tests/: common.py  conftest.py
test_integration/tests/core/: datamodels.py  product.py  session.py
test_integration/tests/mocks/: mock_rates.json
test_integration/tests/test_actions/: test_async_action_example.py  test_enrich_entity_action_example.py  test_ping.py  test_simple_action_example.py
test_integration/tests/test_connectors/: test_simple_connector_example.py
test_integration/tests/test_jobs/: test_simple_job_example.py
test_integration/widgets/: async_action_example.html  async_action_example.yaml  enrich_entity_action_example.html  enrich_entity_action_example.yaml  simple_action_example.html  simple_action_example.yaml
