[project]
name = "SampleIntegration"
version = "1.0"
description = "This is an educational integration designed to showcase the most common design patterns, when working with actions, connectors and jobs."
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests",
    "urllib3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.uv.sources]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
